# FolderWatcher

./: README.md  conanfile.py
FolderWatcher/: Folderwatcher.sln  __main__.py  meson.build  meson_options.txt
FolderWatcher/FolderWatcher/: Folderwatcher.cpp  Folderwatcher.vcxproj  Folderwatcher.vcxproj.filters  __main__.py  meson.build
Profiles/: linux  windows  windowsc
